--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,28 +29,97 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="8dp"
         />
+    <ProgressBar
+        android:id="@+id/loading_pb"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
+    <TextView
+        android:id="@+id/no_network_tv"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/no_network"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/last_searched_label_tv"
+        android:text="@string/last_searched"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <TextView
+        android:id="@+id/last_searched_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:textSize="15sp"
+        android:textColor="@android:color/black"
+        tools:text="01-06-2018"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/last_searched_label_tv"/>
+
+    <TextView
+        android:id="@+id/search_freq_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:textSize="15sp"
+        android:textColor="@android:color/black"
+        tools:text="10"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <TextView
+        android:id="@+id/search_freq_label_tv"
+        android:text="@string/search_freq"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:textSize="15sp"
+        android:textColor="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/search_freq_tv"/>
 
    <ScrollView
        android:id="@+id/display_sv"
        android:layout_width="0dp"
-       android:layout_height="wrap_content"
+       android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/search_box"
+       app:layout_constraintBottom_toTopOf="@id/last_searched_label_tv"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
-       android:layout_marginEnd="8dp">
+       android:layout_marginEnd="8dp"
+       android:layout_marginBottom="32dp">
 
        <TextView
         android:id="@+id/display_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sample_meaning"
+        tools:text="@string/sample_meaning"
+        android:textColor = "@android:color/black"
+        android:textSize="18sp"
        />
    </ScrollView>
+
 
 
 </android.support.constraint.ConstraintLayout>
