--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,22 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp"
+    android:layout_marginBottom ="8dp"
+    android:layout_marginRight ="8dp"
+    android:layout_marginLeft ="8dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <EditText
         android:id="@+id/search_box"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:padding="6dp"
         tools:text="@string/sample_term"
         android:hint="@string/search_hint"
+        android:scrollHorizontally="true"
+        android:background="@drawable/frame_for_search_box"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/search_btn"
         android:layout_marginLeft="8dp"
@@ -27,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginEnd="8dp"
         />
     <ProgressBar
