Confine search box in main activity to one line

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         tools:text="@string/sample_term"
         android:hint="@string/search_hint"
         android:scrollHorizontally="true"
+        android:lines="1"
         android:background="@drawable/frame_for_search_box"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
