Make search box LongText and in effect single line

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:hint="@string/search_hint"
         android:scrollHorizontally="true"
         android:lines="1"
+        android:inputType="textLongMessage"
         android:background="@drawable/frame_for_search_box"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
