--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,10 @@
 
     <EditText
         android:id="@+id/search_box"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:padding="6dp"
+        android:padding="12dp"
         tools:text="@string/sample_term"
         android:hint="@string/search_hint"
         android:lines="1"
@@ -22,7 +22,7 @@
         android:background="@drawable/frame_for_search_box"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/search_btn"
+        app:layout_constraintRight_toLeftOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
@@ -31,12 +31,13 @@
     <Button
         android:id="@+id/search_btn"
         android:layout_width="wrap_content"
-        android:text="@string/search"
+        android:background="@android:drawable/ic_search_category_default"
         android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginEnd="8dp"
+        android:layout_marginTop="6dp"
         />
     <ProgressBar
         android:id="@+id/loading_pb"
@@ -118,7 +119,8 @@
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
-       android:layout_marginBottom="32dp">
+       android:padding="8dp"
+       android:background="@drawable/frame_for_definition_box">
 
        <TextView
         android:id="@+id/display_tv"
