--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,4 +9,10 @@
         android:orderInCategory="1"
         app:showAsAction="never"/>
 
+    <item
+        android:id="@+id/about_menu_item"
+        android:title="@string/about"
+        android:orderInCategory="2"
+        app:showAsAction="never"/>
+
 </menu>
