--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,10 +57,9 @@
         android:text="@string/no_network"
         android:textSize="20sp"
         android:gravity="center_horizontal"
-        android:layout_marginLeft="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginRight="24dp"/>
+        />
 
     <TextView
         android:id="@+id/last_searched_label_tv"
@@ -82,7 +81,7 @@
         android:textColor="@android:color/black"
         tools:text="2018-06-01"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/last_searched_label_tv"/>
+        app:layout_constraintLeft_toRightOf="@+id/last_searched_label_tv"/>
 
     <TextView
         android:id="@+id/search_freq_tv"
@@ -104,14 +103,14 @@
         android:textSize="15sp"
         android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/search_freq_tv"/>
+        app:layout_constraintRight_toLeftOf="@+id/search_freq_tv"/>
 
    <ScrollView
        android:id="@+id/display_sv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/search_box"
-       app:layout_constraintBottom_toTopOf="@id/last_searched_label_tv"
+       app:layout_constraintBottom_toTopOf="@+id/last_searched_label_tv"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
